--- a/jsbasepractice.css
+++ b/jsbasepractice.css
@@ -1,3 +1,13 @@
-@charset "utf-8";
-/* CSS Document */
-
+body{
+	font-size:12px;
+}
+p{
+	line-height:18px;
+	text-indent:2em;
+}
+#txt{
+	height:400px;
+	width:600px;
+	border:#333 solid 1px;
+	padding:5px;
+}
